<resources>
    <string name="app_name">연톡</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="process">Process</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="index_server_error_dialog_message">네트워크 상태를 확인해주세요</string>
    <string name="index_server_error_dialog_negative_button_caption">재시도</string>
    <string name="index_server_error_dialog_positive_button_caption">종료</string>
    <string name="privacy_policy">㈜창수네(이하 회사라 합니다)는 개인정보보호법, 정보통신망 이용촉진 및 정보보호 등에 관한 법률 등 관련법령에서 정보통신서비스제공자가 준수하여야 할 개인정보보호 관련사항을 준수하며, 개인정보처리방침을 정하여 이용자의 권익보호에 최선을 다하고 있습니다. \n개인정보처리방침은 회사가 제공하는 서비스 및 관련 제반 서비스(이하 “서비스”라 합니다) 이용에 적용되며 다음과 같은 내용을 담고 있습니다. 또한, 회사는 개인정보처리방침을 통해 이용자의 개인정보가 어떻게 수집, 이용되고 있으며, 회사가 개인정보보호를 위해 어떠한 조치를 취하고 있는지 알려드립니다. \n이용자는 개인정보의 수집, 이용, 제공, 위탁 등과 관련된 사항에 대해 원하지 않을 경우 동의를 거부할 수 있습니다. 다만, 이용자가 동의를 거부하는 경우 서비스의 전부 또는 일부를 이용할 수 없음을 알려드립니다. \n \n1. 개인정보의 수집 및 이용목적 \n \n개인정보는 생존하는 개인에 관한 정보로서 서비스 이용자를 식별할 수 있는 정보(당해 정보만으로는 특정개인을 식별할 수 없더라도 다른 정보와 용이하게 결합하여 식별할 수 있는 것을 포함)를 말합니다. 회사가 수집한 개인정보는 다음의 목적을 위해 활용합니다. \n \n가. 서비스 제공 및 요금 정산 \n친구초대, 친구추천, 아이템 선물하기, 다른 이용자와의 만남, 아이템 구매 및 결제, 알림 서비스 제공 \n \n나. 이용자 관리 \n서비스 이용에 따른 본인확인, 서비스 제공과 관련한 이용자 확인 및 식별, 불량회원의 부정이용방지 및 비인가 사용방지, 가입의사 확인, 탈퇴의사 확인, 본인확인 및 분쟁조정을 위한 기록보존, 불만처리 등 민원처리, 고지사항 전달 \n \n다. 신규 서비스 개발, 광고 및 마케팅에 활용 \n신규 서비스 개발 및 맞춤 서비스 제공, 통계학적 특성에 따른 서비스 제공 및 광고 게재, 서비스의 유효성 확인, 이벤트 및 광고성 정보 제공과 참여기회 제공, 접속빈도 파악, 서비스 이용에 대한 통계 \n \n2. 수집하는 개인정보의 항목 및 수집방법 \n \n가. 수집하는 개인정보의 항목 \n \n1) 회사는 최적화된 서비스 제공을 위해 서비스 이용시 서비스를 이용하는 플랫폼사업자로부터 아래와 같은 정보를 제공받아 수집할 수 있습니다. \n- 이용자가 플랫폼사업자의 서비스에서 사용하는 닉네임(이름), 회원번호, 친구목록, 프로필 사진 \n2) 서비스 이용과정 또는 사업처리 과정에서 아래와 같은 정보들이 수집될 수 있습니다. \n- 이름, 생년월일, 성별, 휴대폰 번호, 본인인증 정보, 이메일 주소, 비밀번호, 메시지 수신여부, 개인 프로필, 서비스 이용기록, 접속로그, 불량이용기록, 통신사정보, OS정보 및 기기정보, 로케일 정보, 결제기록 \n \n나. 개인정보 수집방법 \n \n회사는 다음과 같은 방법으로 개인정보를 수집합니다. \n- 홈페이지, 애플리케이션, 서면양식, 팩스, 전화, 상담 게시판, 이메일, 이벤트 응모 \n- 제휴사로부터의 제공 \n- 생성정보 수집 툴을 통한 수집 \n \n3. 개인정보의 제공 및 공유 \n \n회사는 이용자의 개인정보를 “개인정보의 수집 및 이용목적”에서 고지한 범위 내에서 사용하며, 이용자의 사전 동의 없이는 그 범위를 초과하여 이용하거나 외부에 공개하지 않습니다. 다만, 아래의 경우에는 주의를 기울여 개인정보를 이용 및 제공할 수 있습니다. \n \n가. 이용자가 사전에 동의한 경우 \n정보수집 또는 정보제공 이전에 이용자에게 수집, 제공하는 파트너가 누구인지, 필요한 정보가 무엇인지, 언제까지 보관하는지 알려드리고 동의를 구하며, 이용자가 동의를 하지 않는 경우에는 추가정보를 수집하지 않거나 공개하지 않습니다. \n \n나. 법령에 특별한 규정이 있는 경우 또는 수사기관이 수사 목적으로 법령에 정해진 절차와 방법에 따라 요구한 경우 \n \n4. 개인정보의 보유 및 이용기간 \n \n이용자의 개인정보는 원칙적으로 개인정보의 수집 및 이용목적이 달성되면 지체없이 파기합니다. 단, 다음의 정보에 대해서는 아래의 이유로 명시한 기간 동안 보존하며, 그 보존 목적으로만 이용합니다. \n \n가. 계약 또는 청약철회 등에 관한 기록 \n- 보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률 \n- 보존 기간 : 5년 \n나. 대금결제 및 재화 등의 공급에 관한 기록 \n- 보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률 \n- 보존 기간 : 5년 \n다. 소비자의 불만 또는 분쟁처리에 관한 기록 \n- 보존 이유: 전자상거래 등에서의 소비자보호에 관한 법률 \n- 보존 기간 : 3년 \n라. 접속기록 \n- 보존 이유 : 통신비밀보호법 \n- 보존 기간 : 3개월 \n마. 회사 내부 방침에 의한 정보보유 사유 \n- 보존 항목 : 부정이용기록 \n- 보존 이유 : 부정이용방지 \n- 보존 기간 : 1년 \n \n5. 개인정보 파기절차 및 방법 \n \n이용자의 개인정보는 원칙적으로 개인정보의 수집 및 이용목적이 달성되면 지체없이 파기하며, 파기절차와 방법은 다음과 같습니다. 다만, 정보통신망 이용촉진 및 정보보호 등에 관한 법률에 따라 1년간 서비스를 이용하지 않은 이용자의 개인정보는 별도로 분리하여 보관합니다. \n \n가. 파기절차 \n이용자가 서비스 이용과정에서 제공한 목적이 달성된 후 별도의 DB로 옮겨져 내부 방침 및 기타 관련 법령에 의한 정보보호 사유에 따라(보유 및 이용기간 참조)일정 기간 저장된 후 파기되며, 법률에 의한 경우가 아니고서는 보유하는 이외의 다른 목적으로 이용되지 않습니다. \n \n나. 파기방법 \n종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기하며, 전자적 파일 형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다. \n \n6. 이용자 권리와 그 행사방법 \n \n이용자는 언제든지 등록되어 있는 자신의 개인정보를 조회하거나 수정할 수 있습니다. 또한, 애플리케이션의 환경설정에서 탈퇴를 이용하여 서비스 해지를 요청할 수 있습니다. \n이용자의 개인정보 조회, 수정을 위해서는 플랫폼사업자 또는 앱스토어사업자를 통해 계정  삭제를 클릭하여 직접 열람, 정정 또는 탈퇴가 가능합니다. 만약, 회사가 보유하고 있지 않은 개인정보를 확인하고자 할 경우, 회사가 서비스를 제공하는 플랫폼사업자 또는 앱스토어사업자의 가입내역 확인 및 개인정보제공을 통해 회사에서 수집한 정보와 대조하여 본인확인을 할 수 있어야 합니다. \n이용자가 개인정보의 오류에 대한 정정을 요청하신 경우에는 정정을 완료하기 전까지 당해 개인정보를 이용 또는 제공하지 않습니다. \n회사는 이용자의 요청에 의해 해지 또는 삭제된 개인정보는 4.  개인정보의  보유  및  이용기간에 명시된 바에 따라 처리하고 그외의 용도로 열람 또는 이용할 수 없도록 처리하고 있습니다. \n \n7. 개인정보 취급위탁 \n \n회사는 전문적인 고객지원 및 서비스 제공을 위해 아래와 같이 개인정보의 취급업무를 외부업체에 위탁하여 운영하고 있으며, 위탁계약 체결시 개인정보보호의 안전을 기하기 위하여 위탁계약에 개인정보보호 관련 지시엄수, 개인정보의 유출금지 및 사고시의 책임부담 등을 명확하게 규정하고 있습니다. \n \n&lt;수탁업체: 한국모바일인증(주), (주)바다정보&gt; \n- 위탁업무 내용: 휴대전화를 통한 본인확인 인증 \n- 보유 및 이용기간: 회원 탈퇴 시 또는 위탁계약 종료 시까지 \n&lt;수탁업체: LG 유플러스&gt; \n- 위탁업무 내용: 결제대행 \n- 보유 및 이용기간: 회원 탈퇴 시 또는 위탁계약 종료 시까지 \n&lt;수탁업체: Amazon Web Services, Inc., Google Inc.&gt; \n- 위탁업무 내용: 안정적인 웹서비스 운영 \n- 보유 및 이용기간: 회원 탈퇴 시 또는 위탁계약 종료 시까지 \n&lt;수탁업체: (주)넷퍼씨, (주)바다정보, 엔에이치엔엔터테인먼트(주), TWILIO&gt; \n- 위탁업무 내용: Email, SMS/LMS 마케팅 \n- 보유 및 이용기간: 회원 탈퇴 시 또는 위탁계약 종료 시까지 \n \n8. 개인정보 자동 수집 장치의 설치/운영 및 거부에 관한 사항 \n \n가. 회사는 개인화 및 맟춤화된 서비스를 제공하기 위해 이용자의 정보를 저장하고 수시로 불러오는 쿠기(cookie)를 사용합니다. 쿠키는 웹사이트를 운영하는데 이용되는 서버가 이용자의 브라우저에게 보내는 아주 작은 텍스트 파일로 이용자 컴퓨터의 하드디스크에 저장됩니다. 이후 이용자가 웹사이트에 방문할 경우 웹사이트 서버는 이용자의 하드디스크에 저장되어 있는 쿠키의 내용을 읽어 이용자의 환경설정을 유지하고 맞춤화된 서비스를 제공하기 위해 이용됩니다. \n \n나. 쿠키는 개인을 식별하는 정보를 능동적/자동적으로 수집하지 않으며, 이용자는 언제든지 이러한 쿠키의 저장을 거부하거나 삭제할 수 있습니다. 다만, 쿠키의 저장을 거부할 경우에는 서비스의 전부 또는 일부를 이용하는 것이 불가능할 수 있습니다. \n \n다. 쿠키 설치 허용여부를 지정하는 방법(인터넷 익스플로러의 경우)은 다음과 같습니다. \n“도구” 메뉴에서 “인터넷 옵션” 선택 ⇒ “개인정보 탭” 클릭 ⇒ 개인정보 취급수준 설정 \n \n9. 개인정보의 기술적/관리적 보호 대책 \n회사는 이용자들의 개인정보를 취급함에 있어 개인정보가 분실, 도난, 누출, 변조 또는 훼손되지 않도록 안전성 확보를 위하여 다음과 같은 기술적/관리적 대책을 강구하고 있습니다. \n \n가. 기술적인 대책 \n- 회사는 이용자의 개인정보를 관련법령 및 내부정책에 따라 보안기능을 통해 안전하게 보호하고 있습니다. \n- 회사는 백신프로그램을 이용하여 컴퓨터 바이러스에 의한 피해를 방지하기 위한 조치를 취하고 있습니다. 백신프로그램은 주기적으로 업데이트되며, 갑작스런 바이러스가 출현될 경우 백신이 나오는 즉시 이를 적용함으로써 개인정보가 침해되는 것을 방지하고 있습니다. \n- 회사는 이용자의 개인정보를 안전하게 저장 및 관리하고 있으며, 네트워크상의 개인정보를 안전하게 전송할 수 있는 보안장치를 채택하고 있습니다. \n- 회사는 해킹 등에 의해 이용자의 개인정보가 유출되는 것을 방지하기 위하여 외부로부터의 침입을 차단하는 장치를 이용하고 있으며, 항시 외부로부터의 침입을 감시하고 있습니다. \n \n나. 관리적인 대책 \n- 회사는 개인정보를 보관하는 데이터베이스시스템과 개인정보를 처리하는 시스템에 대한 비밀번호 생성, 변경 및 접근할 수 있는 권한에 대한 체계적인 기준을 마련하여 담당직원이 준수할 수 있도록 하고 있습니다. \n- 회사는 개인정보를 취급하는 직원을 개인정보 관리업무를 수행하는 자 및 업무상 개인정보의 취급이 불가피 한 자로 엄격히 제한하고, 담당직원에 대한 교육을 통하여 개인정보처리방침을 준수할 수 있도록 하고 있습니다. \n \n10. 개인정보관리책임자 연락처 \n이용자는 서비스를 이용하는 과정에서 발생하는 개인정보보호 관련 민원을 개인정보관리책임자에게 신고하실 수 있습니다. 회사는 이용자의 신고사항에 대해 신속하게 충분한 답변을 드릴 것입니다. \n \n[개인정보관리책임자] \no 이름 : 김창수 \no 소속 및 직위 : CEO / 대표이사 \no 전화 : 02-1223-4567 \no 이메일 : help@self.co.kr \n \n기타 개인정보침해에 관한 신고나 상담이 필요하신 경우에는 아래 기관에 문의하여 주시기 바랍니다. \n- 개인정보침해신고센터(privacy.kisa.or.kr / 국번없이 118) \n- 대검찰청 사이버수사과(www.spo.go.kr / 국번없이 1301) \n- 경찰청 사이버안전국 (www.ctrc.go.kr / 국번없이 182) \n \n[부칙] \n1. 회사는 개인정보처리방침을 변경하는 경우 그 변경사유 및 적용일자를 명시하여 현행 개인정보처리방침과 함께 적용일자 7일전부터 적용일전까지 서비스에 고지합니다. 다만, 이용자의 권리 또는 의무에 중요한 내용의 변경이 있을 경우에는 최소 30일전에 고지합니다. \n \n2. 회사가 제1항에 따라 변경 내용을 고지하면서 변경 적용일까지 거부의사를 표시하지 아니하는 경우 이용자가 변경내용에 동의한 것으로 봅니다. \n \n3. 회사는 제2항에도 불구하고 이용자로부터 개인정보를 추가로 수집하거나 제3자에게 제공하는 경우에는 이용자 본인으로부터 이에 대하여 별도 동의 절차를 거칩니다. \n본 개인정보처리방침은 2017년 1월 1일부터 적용됩니다.</string>
    <string name="welcome_greeting">외로움을 달래줄 친구들을 만들어보세요!</string>
    <string name="registration_birth_year">생년</string>
    <string name="registration_gender">성별</string>
    <string name="registration_nation">국가</string>
    <string name="registration_nickname">닉네임</string>
    <string name="registration_no_selection">선택해주세요</string>
    <string name="registration_region">지역</string>
</resources>