<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="15dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/white" android:gravity="center" android:background="@drawable/textviewstyle2" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="15dp" android:layout_marginRight="10dp" android:text="@string/welcome_greeting"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp">
        <LinearLayout android:orientation="horizontal" android:id="@+id/layout_registration_nickname_id" android:background="@drawable/selector_background" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/registration_nickname" android:layout_weight="1"/>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:ellipsize="end" android:gravity="center" android:id="@+id/textview_registration_nickname_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/registration_no_selection" android:maxLines="1" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/layout_registration_gender_id" android:background="@drawable/selector_background" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/registration_gender" android:layout_weight="1"/>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="center" android:id="@+id/textview_registration_gender_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/registration_no_selection" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/layout_registration_birth_year_id" android:background="@drawable/selector_background" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/registration_birth_year" android:layout_weight="1"/>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="center" android:id="@+id/textview_registration_birthyear_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/registration_no_selection" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/layout_registration_nation_id" android:background="@drawable/selector_background" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/registration_nation" android:layout_weight="1"/>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="center" android:id="@+id/textview_registration_nation_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/registration_no_selection" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/layout_registration_region_id" android:background="@drawable/selector_background" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/registration_region" android:layout_weight="1"/>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="center" android:id="@+id/textview_registration_region_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/registration_no_selection" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <View android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
    <Button android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:id="@+id/button_registration_id" android:background="@drawable/selector_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="30dp" android:text="시작하기"/>
</LinearLayout>
