<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/layout_top_toolbar"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="친구 검색 조건"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/layout_setting_gender_id" android:background="@drawable/selector_setting_background" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="left" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/registration_gender" android:layout_weight="1"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="right" android:id="@+id/textview_setting_gender_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="선택안함" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/layout_setting_birth_year_id" android:background="@color/white" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="left" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="나이" android:layout_weight="1"/>
                <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:layout_weight="1">
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:layout_gravity="right" android:id="@+id/textview_setting_min_age_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="19"/>
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" ~ "/>
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:layout_gravity="right" android:id="@+id/textview_setting_max_age_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="50+"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:background="@color/white" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar android:id="@+id/rangeSeekbar" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" app:bar_color="#8990c4" app:bar_highlight_color="#2434ad" app:corner_radius="10" app:data_type="_integer" app:left_thumb_color="#1a246d" app:left_thumb_color_pressed="#030b47" app:max_value="50" app:min_value="19" app:right_thumb_color="#1a246d" app:right_thumb_color_pressed="#030b47" app:steps="1"/>
            </LinearLayout>
            <View android:background="@color/lightGray" android:layout_width="match_parent" android:layout_height="1dp"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/layout_setting_nation_id" android:background="@drawable/selector_setting_background_no_stroke" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="left" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/registration_nation" android:layout_weight="1"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="right" android:id="@+id/textview_setting_nation_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="선택안함" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/layout_setting_region_id" android:background="@drawable/selector_setting_background" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="left" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/registration_region" android:layout_weight="1"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="right" android:id="@+id/textview_setting_region_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="선택안함" android:layout_weight="1"/>
            </LinearLayout>
            <Button android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:id="@+id/button_secession_id" android:background="@drawable/selector_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="계정 탈퇴"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
