<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/layout_top_toolbar"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView android:layout_gravity="center" android:id="@+id/imageview_profile_user_image_id" android:layout_width="90dp" android:layout_height="90dp" android:src="@drawable/ic_person_black_24dp" app:civ_border_color="#cfcfcf" app:civ_border_width="1dp"/>
                <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="#000000" android:layout_gravity="center" android:id="@+id/textview_profile_nickname_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="닉네임"/>
            </LinearLayout>
            <View android:background="@color/lightGray" android:layout_width="match_parent" android:layout_height="1dp"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="사진첩"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/textviewstyle" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
                <android.support.v7.widget.RecyclerView android:id="@+id/recyclerview_profile_images_list_id" android:layout_width="match_parent" android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="기본 정보"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/layout_profile_gender_id" android:background="@drawable/selector_setting_background" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="left" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/registration_gender" android:layout_weight="1"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="right" android:id="@+id/textview_profile_gender_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="선택안함" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/layout_profile_birth_year_id" android:background="@drawable/selector_setting_background_no_stroke" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="left" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="나이" android:layout_weight="1"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="right" android:id="@+id/textview_profile_birthyear_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="선택안함" android:layout_weight="1"/>
            </LinearLayout>
            <View android:background="@color/lightGray" android:layout_width="match_parent" android:layout_height="1dp"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/layout_profile_nation_id" android:background="@drawable/selector_setting_background_no_stroke" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="left" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/registration_nation" android:layout_weight="1"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="right" android:id="@+id/textview_profile_nation_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="선택안함" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/layout_profile_region_id" android:background="@drawable/selector_setting_background" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="left" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/registration_region" android:layout_weight="1"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:gravity="right" android:id="@+id/textview_profile_region_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="선택안함" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/black" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="자기 소개"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearlayout_introduction_profile_id" android:background="@drawable/textviewstyle" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@android:color/black" android:id="@+id/textview_profile_introduction_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="100dp" android:hint="자기 소개를 입력해 주세요."/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="30dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
